--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
+    "apollo": "^2.32.1",
     "customize-cra": "^1.0.0",
     "emotion-normalize": "^11.0.1",
     "graphql": "^15.4.0",
     "react": "^17.0.1",
     "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.1",
+    "react-form-hook": "^0.0.1",
     "react-hook-form": "^6.13.1",
     "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
@@ -29,11 +31,15 @@
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
+  "resolutions": {
+    "ts-invariant": "^0.6.0"
+  },
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "apollo:codegen": "apollo client:codegen src/__generated__ --target=typescript  --outputFlat"
   },
   "eslintConfig": {
     "extends": [
