--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
+  "resolutions": {
+    "ts-invariant": "^0.6.0"
+  },
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
