--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
-    "apollo": "^2.32.1",
     "customize-cra": "^1.0.0",
     "emotion-normalize": "^11.0.1",
+    "graphiql": "^1.0.0-alpha.13",
     "graphql": "^15.4.0",
     "react": "^17.0.1",
     "react-app-rewired": "^2.1.8",
