--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-textarea-autosize": "^8.3.1",
     "tailwindcss": "^2.0.2",
     "twin.macro": "^2.1.0",
     "typescript": "^4.0.3",
